tests/error/lessThanEqualsInteger-list-integer--wrong-1st-argument.uplc
(program 1.0.0[[(builtin lessThanEqualsInteger)(con list(integer) [42, 10, 53])](con integer 10)])